menambah gambar menjadi 6

--- a/index.html
+++ b/index.html
@@ -87,16 +87,40 @@
 				<div class="card">
  					 <img src="img/coding.jpg" class="card-img-top" alt="img">
  					 <div class="card-body">
-    				<p class="card-text"> coding artinya menulis sekumpulan code sesuai dengan aturan penulisan (syntax) tertentu dari bahasa pemrograman yang digunakan. Bahasa pemrograman ini sendiri ada bermacam-macam.</p>
+    				<p class="card-text"> Coding? Kata apa itu. Banyak orang yang tidak tahu apa itu coding. Jadi,coding artinya menulis sekumpulan code sesuai dengan aturan penulisan (syntax) tertentu dari bahasa pemrograman yang digunakan. Bahasa pemrograman ini sendiri ada bermacam-macam.</p>
   					
 				</div>
 			 </div>
 			</div>
 			<div class="col-md-4 mb-3">
 				<div class="card">
+ 					 <img src="img/lr.png" class="card-img-top" alt="img">
+ 					 <div class="card-body">
+    				<p class="card-text">Apa itu laravel? <br />Laravel adalah kerangka kerja aplikasi web berbasis PHP yang sumber terbuka, menggunakan konsep Model-View-Controller. Laravel berada dibawah lisensi MIT, dengan menggunakan GitHub sebagai tempat berbagi kode.</p>
+  				</div>
+			 </div>
+			</div>
+			<div class="col-md-4 mb-3">
+				<div class="card">
+ 					 <img src="img/ms.png" class="card-img-top" alt="img">
+ 					 <div class="card-body">
+    				<p class="card-text">Apa itu MySql? Apakah kalian sudah ada yang tau? ya jadi MySQL adalah sebuah perangkat lunak sistem manajemen basis data SQL atau DBMS yang multialur, multipengguna, dengan sekitar 6 juta instalasi di seluruh dunia.</p>
+  				</div>
+			 </div>
+			</div>
+			<div class="col-md-4 mb-3">
+				<div class="card">
+ 					 <img src="img/C.png" class="card-img-top" alt="img">
+ 					 <div class="card-body">
+    				<p class="card-text">C#,adakah yang tau apa itu C#? pastinya sudah tidak asing lagi bagi anak TI bukan? <br />Nah jadi,C# merupakan sebuah bahasa pemrograman yang berorientasi objek yang dikembangkan oleh Microsoft sebagai bagian dari inisiatif kerangka .</p>
+  				</div>
+			 </div>
+			</div>
+			<div class="col-md-4 mb-3">
+				<div class="card">
  					 <img src="img/java.png" class="card-img-top" alt="img">
  					 <div class="card-body">
-    				<p class="card-text">Java adalah satu set perangkat lunak komputer dan spesifikasi yang dikembangkan oleh Sun Microsystems, yang kemudian diakuisisi oleh Oracle Corporation, yang menyediakan sistem untuk mengembangkan aplikasi perangkat lunak dan menerapkan hal itu dalam sebuah cross-platform lingkungan komputasi. digunakan di berbagai macam platform komputasi dari perangkat embedded dan ponsel ke server perusahaan dan superkomputer.</p>
+    				<p class="card-text">	Java?Apa itu Java?Apakah bahasa Inggrisnya Jawa?. Pasti banyak yang mengira seperti itu. Tetapi sebetulnya java itu merupakan salah satu bahasa pemrograman.Arti Java adalah satu set perangkat lunak komputer dan spesifikasi yang dikembangkan oleh Sun Microsystems, yang kemudian diakuisisi oleh Oracle Corporation, yang menyediakan sistem untuk mengembangkan aplikasi perangkat lunak dan menerapkan hal itu dalam sebuah cross-platform lingkungan komputasi.</p>
   				</div>
 			 </div>
 			</div>
@@ -104,7 +128,7 @@
 				<div class="card">
  					 <img src="img/html.png" class="card-img-top" alt="img">
  					 <div class="card-body">
-    				<p class="card-text">Hypertext Markup Language adalah bahasa markah standar untuk dokumen yang dirancang untuk ditampilkan di peramban internet. Ini dapat dibantu oleh teknologi seperti Cascading Style Sheets dan bahasa scripting seperti JavaScript dan VBScript.</p>
+    				<p class="card-text">Apa itu HTML? arti kata HTML pasti cukup asing dikalangan masyarakat bahkan dapat dibilang asing bukan? <br/>Jadi,Hypertext Markup Language adalah bahasa markah standar untuk dokumen yang dirancang untuk ditampilkan di peramban internet. Ini dapat dibantu oleh teknologi seperti Cascading Style Sheets dan bahasa scripting seperti JavaScript dan VBScript.</p>
   				</div>
 			 </div>
 			</div>
@@ -125,7 +149,7 @@
 
  <div class ="row justify-content-center">
          <div class ="col-md-6 ">
-		 <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+		 <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
   <strong>Terima Kasih!</strong>Pesan Anda Sudah Kami Terima
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
@@ -133,13 +157,13 @@
   	<div class="mb-3">
     <label for="name" class="form-label">Nama</label>
     <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
-  
-  </div>
+ </div>
   
   	<div class="mb-3">
     	<label for="email" class="form-label">Email</label>
     	<input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
   	</div>
+	
   	<div class="mb-3">
   		<label for="pesan" class="form-label">Pesan</label>
   		<textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
@@ -167,7 +191,7 @@
 
 
 <script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbxoSfEg46zUTKZds-znTwjULr4x3ojXUXvSZPiZE3chRYa7OJK5MRxQx5Hul_oAx7UXKA/exec'
+  const scriptURL = 'https://script.google.com/macros/s/AKfycby-3HJFVMpJJQL4u4lD6v6UjyXF1j_jSFmswFGLojRnSAkt71zZi-hGZWBusR3cpd4TEQ/exec'
   const form = document.forms['Web-RPL'];
   const btnKirim= document.querySelector('.btn-kirim');
   const btnLoading= document.querySelector('.btn-loading');
